<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Muscu</string>
    <string name="alarm_name">Alarme</string>
    <string name="weight_name">Poids</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="select_beep_button">Sonnerie</string>
    <string name="timer_name">Count Down</string>
    <string name="OK_button">OK</string>
    <string name="restart_button">Restart</string>
    <string name="continue_button">Reprendre</string>
    <string name="count">Nombre de cycle : </string>
    <string name="error_zero">Le temps des timer (\"%1$s\" et \"%2$s\") doivent être supérieur à 0</string>
    <string name="error_beep">Il faut choisir une sonnerie</string>
    <string name="delay">Délai avant le lancement : </string>
    <string name="hint_weight_edittext">90.0</string>
    <string name="weight_unit">kg</string>
    <string name="save_button">Enregistrer</string>
    <string name="stats_button">Voir les stats</string>
    <string name="error_weight">Il faut rentrer un poids pour enregistrer</string>
    <string name="stats">Statistiques</string>
    <string name="exercise">Temps d\'exercice</string>
    <string name="recovery">Temps de récupération</string>
    <string name="statusExercise">Exercice</string>
    <string name="statusRecovery">Recupération</string>
    <string name="pause">Pause</string>
    <string name="statusPrepare">Préparation</string>
    <string name="exercise_name_column">Nom</string>
    <string name="exercise_time_column">Temps</string>
    <string name="exercise_recovery_column">Récup</string>
    <string name="exercise_count_column">Série(s)</string>
    <string name="error_exercise_notfound">Aucun exercice trouvé</string>
</resources>
