<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<com.xqvier.muscu.widget.ExerciseNameField
		android:id="@+id/exerciseNameAuto" android:layout_width="match_parent"
		android:layout_height="wrap_content" />
	<TableLayout android:id="@+id/tabLayout"
		android:layout_width="match_parent" android:layout_height="match_parent"
		android:stretchColumns="*">
		<TableRow android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/exercise_name_column" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/exercise_time_column" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/exercise_recovery_column" />
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/exercise_count_column" />
		</TableRow>
		<View android:layout_width="match_parent" android:layout_height="2dip"
			android:background="#FFFFFF" />
	</TableLayout>
</LinearLayout>